[package]
name = "rustnbt"
authors = ["Derek F. <https://github.com/NullSurplus/>", "Rust Programming Language Discord Server <https://discord.gg/rust-lang-community>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustnbt"
path = "nbt_test.rs"

[features]
preserve_order = ["dep:indexmap"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2.15"
indexmap = { version = "1.9.1", optional = true }
bytemuck = "1.12.1"
