[package]
name = "rustnbt"
version = "0.1.0"
authors = ["Derek F. <https://github.com/NullSurplus/>", "Rust Programming Language Discord Server <https://discord.gg/rust-lang-community>"]
edition = "2021"
description = "Minecraft NBT Library."
readme = "README.md"
repository = "https://github.com/NullSurplus/rustnbt"
license-file = "LICENSE"
keywords = ["minecraft", "nbt", "serialization","formats"]
categories = ["parsing", "encoding", "data-structures"]
# Not ready for release, so we'll leave this here for now.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preserve_order = ["dep:indexmap"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2.15"
indexmap = { version = "1.9.1", optional = true }
bytemuck = "1.12.1"
chumsky = "0.8.0"
rustnbtmacro = { path = "rustnbtmacro" }

[[bin]]
name = "formatnbt"
required-features = ["preserve_order"]

[workspace]
